corrected some overflowing pages

--- a/src/LandinPage/Categories.scss
+++ b/src/LandinPage/Categories.scss
@@ -67,6 +67,8 @@
     height: 62px;
     border-radius: 5px;
     background-color: #f4f7f7;
+    background-size: 200% 100%;
+    transition: background-position 2s ease;
 }
 
 .each-categories:hover {
