--- a/src/MiniNav.scss
+++ b/src/MiniNav.scss
@@ -12,6 +12,10 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        gap: 2px;
+    }
+    .search{
+        font-size: 30px;
     }
     .cont-back-btn{
         display: flex;
@@ -29,7 +33,7 @@
         display: flex;
         gap: 20px;
     }
-    
+ 
     .link {
         text-decoration: none;
         color: black;
@@ -64,13 +68,29 @@
         font-weight: 500;
     }
     .h1{
-        font-size: 23px !important;
+        font-size: 22px !important;
         font-weight: 500 !important;
     }
-  
-    // .search{
-    //     size: 2 !important;
-    //     font-weight: 100;
-    //     color: red;
-    // }
 }
+
+@media (max-width: 510px) {
+    .link {
+        text-decoration: none;
+        color: black;
+        font-size: 11px !important;
+        font-weight: 450;
+    }
+    .h1{
+        font-size: 17px !important;
+        font-weight: 450 !important;
+    }
+
+    .back{
+        background-color: aqua;
+        font-size: 13px;
+    }
+    .search{
+        font-size: 25px !important;
+    }
+}
+
